fix excess spacing between sections

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@ p {
                           General
 *************************************************************/
 .main-container {
-  @apply flex flex-col text-text text-start items-center z-20 pb-36;
+  @apply flex flex-col text-text text-start items-center z-20 pb-24;
 }
 
 .character {
